<resources>
    <string name="app_name">通知处理器</string>
    <string name="actioner_setting">通知处理器设置</string>

    <string name="new_filiter">新建规则</string>
    <string name="no_filiter">无规则，请添加</string>
    <string name="content_replace">内容替换规则（正则表达式）</string>
    <string name="content_match">内容匹配规则（正则表达式）</string>
    <string name="isBreak">是否阻止规则向下传播</string>
    <string name="edit">修改</string>
    <string name="detelet">删除</string>
    <string name="content_extra">内容提取规则（正则表达式）</string>
    <string name="title_replace">标题替换规则（正则表达式）</string>
    <string name="title_extra">标题提取规则（正则表达式）</string>
    <string name="title_match">标题匹配规则（正则表达式）</string>
    <string name="replace">替换规则</string>
    <string name="match">匹配规则</string>

    <string name="nav_permisson_setting">权限设置</string>
    <string name="nav_notification_handler">通知拦截规则设置</string>
    <string name="nav_notification_log">通知日志记录</string>
    <string name="nav_global_setting">全局设置</string>
    <string name="nav_float_tile_setting">悬浮通知处理器设置</string>
    <string name="nav_danmu_tile_setting">弹幕通知处理器设置</string>
    <string name="nav_other_actioner_setting">其他通知处理器设置</string>
    <string name="nav_donate">捐赠</string>
    <string name="nav_about_me">关于</string>
    <string name="nav_add_notification_handler">通知拦截规则</string>

    <string name="nav_float_tile_custom_view">悬浮通知视图自定义</string>


    <string name="on_preference_change_toast_message">onPreferenceChange: key = %1$s, newValue = %2$s</string>

    <string name="filiter_name">规则名称</string>
    <string name="filter_ID">规则ID</string>
    <string name="start_service">开启服务</string>
    <string name="donate_list">
        业余时间开发此软件,虽费时费力,但方便自己方便他人,在这里感谢下列用户的支持:\n
    z*j,*细、我就是冲天总司的老总、yaeason、*吼、坂田井川、N*l、阿陌哥哥、大手一挥令成t、焚墨云尘。
    </string>


    <string name="message_reply_tip">微信快捷回复功能需要安装插件Google Auto 插件才能生效,原版程序体积过大,特做了精简版,仅13KB \n 小窗模式请手动开启软件后台显示界面权限,安卓10需要开发者选项里开启强制将活动设为可调整的大小,安卓8 9需要adb执行adb shell settings put global enable_freeform_support 1</string>
    <string-array name="array_position_entries">
        <item>向上</item>
        <item>向下</item>
    </string-array>
    <string-array name="array_position_entries_values">
        <item>up</item>
        <item>down</item>
    </string-array>

    <string-array name="array_copyactioner_select_mode">
        <item>标题</item>
        <item>内容</item>
    </string-array>
    <string-array name="array_copyactioner_select_mode_values">
        <item>title</item>
        <item>content</item>
    </string-array>

    <string-array name="notification_patter_item">
        <item>标题</item>
        <item>内容</item>
    </string-array>
    <string-array name="notification_patter_item_value">
        <item>title</item>
        <item>content</item>
    </string-array>

    <string-array name="notification_patter_mode">
        <item>包含</item>
        <item>不包含</item>
        <item>正则表达式</item>
    </string-array>
    <string-array name="notification_patter_mode_value">
        <item>contain</item>
        <item>nocontain</item>
        <item>regex</item>
    </string-array>

    <string-array name="notification_actioner">
        <item>悬浮通知</item>
        <item>系统通知</item>
        <item>丢弃通知</item>
        <item>复制到内容到剪贴板</item>
        <item>执行点击事件</item>
        <item>保存到日记记录</item>
        <item>播放提示音</item>
        <item>通知组件悬浮</item>
        <item>弹幕通知</item>
    </string-array>

    <string-array name="notification_sceen_status_on">
        <item>横竖屏同时启用</item>
        <item>仅横屏启用</item>
        <item>仅竖屏启用</item>
    </string-array>

    <string name="check_float_window_permission">检查悬浮窗权限</string>
    <string name="stop_service">停止服务,关闭所有窗口</string>
    <string name="has_float_permission">可以添加悬浮窗</string>
    <string name="no_float_permission">没有悬浮窗权限</string>
    <string name="go_t0_open_float_ask">前往打开悬浮窗权限吗？</string>
    <string name="has_notification_permission">可以获取通知</string>
    <string name="no_notification_permission">没有获取通知权限</string>
    <string name="go_t0_open_notification_ask">前往打开获取通知权限吗？</string>
    <string name="has_permission">相应权限已开启</string>
    <string name="no_permission">未获取相应权限</string>
    <string name="service_start">通知处理器服务正在运行</string>
    <string name="service_stop">通知处理器服务已关闭</string>
    <string name="close">点击关闭</string>
    <string name="select_app_filiter">点击选择匹配应用</string>

    <string name="freeform_mode_start">小窗模式已开启</string>
    <string name="freeform_mode_stop">小窗模式已关闭</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="launch_name">应用图标</string>
    <string name="filter_content">规则内容</string>
    <string name="selectActioner">通知处理器设置</string>
    <string name="donate_name_list">捐赠列表</string>
    <!-- Preference Titles -->

    <!--    <string name="new_title" />-->

</resources>
