<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.MainNavHastFragment"
    android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
    <Switch
        android:id="@+id/start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:text="开启服务"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/permission_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_permisson_setting" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/notification_handler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_notification_handler" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/notification_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_notification_log" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/global_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_global_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/send_test_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="发送一条测试通知" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/float_tile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_float_tile_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/danmu_tile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_danmu_tile_setting" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/other_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_other_actioner_setting" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_donate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/about_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="18dp"
            android:textColor="#FF000000"
            android:textSize="@dimen/sp_18"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:text="@string/nav_about_me" />
    </LinearLayout>

</LinearLayout>
</ScrollView>